--- a/mail/contact_me.html
+++ b/mail/contact_me.html
@@ -1,8 +1,97 @@
-<form action="https://formspree.io/f/manjjwpe" method="POST">
-  <input id="name" name="name" type="text" placeholder="Your Name" required>
-  <input id="email" name="_replyto" type="email" placeholder="Your Email" required>
-  <input id="phone" name="phone" type="text" placeholder="Your Phone">
-  <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+  <style>
+    .hidden {
+      display: none;
+    }
+    .form-message {
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
 
-  <button type="submit">Send</button>
-</form>
+  <div class="container mt-5">
+    <h1>Contact Me</h1>
+    <form id="contactForm" action="https://formspree.io/f/manjjwpe" method="POST">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input id="name" name="name" type="text" class="form-control" placeholder="Enter your name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input id="email" name="email" type="email" class="form-control" placeholder="Enter your email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="phone">Phone</label>
+        <input id="phone" name="phone" type="text" class="form-control" placeholder="Enter your phone number">
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" class="form-control" placeholder="Write your message here" required></textarea>
+      </div>
+
+      <!-- Honeypot field -->
+      <input class="hidden" aria-hidden="true" name="_gotcha" tabindex="-1" autocomplete="off">
+
+      <button id="submitBtn" type="submit" class="btn btn-primary">Send</button>
+
+      <div id="form-message" class="form-message mt-3" role="alert" style="display: none;"></div>
+
+    </form>
+  </div>
+
+  <script>
+    document.getElementById('contactForm').addEventListener('submit', async function (e) {
+      e.preventDefault();
+
+      // Hide previous messages
+      const formMsg = document.getElementById('form-message');
+      formMsg.style.display = 'none';
+      formMsg.classList.remove('alert', 'alert-danger', 'alert-info', 'alert-success');
+
+      // Gather form data
+      const form = e.target;
+      const formData = new FormData(form);
+
+      try {
+        const response = await fetch(form.action, {
+          method: form.method,
+          body: formData,
+          headers: { Accept: "application/json" },
+        });
+
+        if (response.ok) {
+          formMsg.textContent = "Your message has been successfully sent.";
+          formMsg.classList.add("alert", "alert-success");
+
+          formMsg.style.display = "block";
+
+          form.reset();
+
+        } else {
+          formMsg.textContent = "Oops! There was a problem sending your message.";
+          formMsg.classList.add("alert", "alert-danger");
+
+          formMsg.style.display = "block";
+
+        }
+      } catch (error) {
+        formMsg.textContent = "Oops! An error occurred.";
+        formMsg.classList.add("alert", "alert-danger");
+
+        formMsg.style.display = "block";
+
+      }
+    });
+  </script>
+
+</body>
+</html>
