--- a/mail/contact_me.html
+++ b/mail/contact_me.html
@@ -1,3 +1,6 @@
+# this is being pulled from nowhere. So here is the old, original contact.html from the _includes section that I am updating with the streamlined version: 
+
+<!-- Contact Section -->
 <section id="contact">
   <div class="container">
     <div class="row">
@@ -8,49 +11,46 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <form id="contactForm" action="https://formspree.io/f/manjjwpe" method="POST">
+        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+        <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+        <form name="sentMessage" id="contactForm" novalidate>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="name">Name</label>
-              <input id="name" name="name" type="text" class="form-control" placeholder="Name" required>
+              <input type="text" class="form-control" placeholder="Name" id="name" required
+                data-validation-required-message="Please enter your name.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
-
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="email">Email Address</label>
-              <input id="email" name="email" type="email" class="form-control" placeholder="Email Address" required>
+              <input type="email" class="form-control" placeholder="Email Address" id="email" required
+                data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
-
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="phone">Phone Number</label>
-              <input id="phone" name="phone" type="tel" class="form-control" placeholder="Phone Number">
+              <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required
+                data-validation-required-message="Please enter your phone number.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
-
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="message">Message</label>
-              <textarea id="message" name="message" rows="5" class="form-control" placeholder="Message" required></textarea>
+              <textarea rows="5" class="form-control" placeholder="Message" id="message" required
+                data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
           </div>
-
-          <!-- Honeypot field -->
-          <input class="hidden" aria-hidden="true" name="_gotcha" tabindex="-1" autocomplete="off">
-
           <br>
-
-          <div id="form-message" class="form-message mt-3" role="alert" style="display: none;"></div>
-
+          <div id="success"></div>
           <div class="row">
             <div class="form-group col-xs-12">
-              <button id="submitBtn" type="submit" class="btn btn-info btn-lg">Send</button>
+              <button type="submit" class="btn btn-success btn-lg">Send</button>
             </div>
           </div>
         </form>
@@ -58,48 +58,3 @@
     </div>
   </div>
 </section>
-
-<script>
-  document.getElementById('contactForm').addEventListener('submit', async function (e) {
-    e.preventDefault();
-
-    // Hide previous messages
-    const formMsg = document.getElementById('form-message');
-    formMsg.style.display = 'none';
-    formMsg.classList.remove('alert', 'alert-danger', 'alert-info', 'alert-success');
-
-    // Gather form data
-    const form = e.target;
-    const formData = new FormData(form);
-
-    try {
-      const response = await fetch(form.action, {
-        method: form.method,
-        body: formData,
-        headers: { Accept: "application/json" },
-      });
-
-      if (response.ok) {
-        formMsg.textContent = "Your message has been successfully sent.";
-        formMsg.classList.add("alert", "alert-success");
-
-        formMsg.style.display = "block";
-
-        form.reset();
-
-      } else {
-        formMsg.textContent = "Oops! There was a problem sending your message.";
-        formMsg.classList.add("alert", "alert-danger");
-
-        formMsg.style.display = "block";
-
-      }
-    } catch (error) {
-      formMsg.textContent = "Oops! An error occurred.";
-      formMsg.classList.add("alert", "alert-danger");
-
-      formMsg.style.display = "block";
-
-    }
-  });
-</script>
